argo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-dashboard
  labels:
    run: d-dashboard
spec:
  # Removing as it's controlled by HPA and interrupts ARGO
  replicas: 2
  selector:
    matchLabels:
      run: d-dashboard
  template:
    metadata:
      labels:
        run: d-dashboard
    spec:
      affinity:
        # Try to put each pod on a different node in the K8s cluster
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: run
                    operator: In
                    values:
                      - d-dashboard
                topologyKey: kubernetes.io/hostname
      volumes:
      - name: d-dashboard-secrets
        secret:
          secretName: d-dashboard-secret-mount
      containers:
      - name: d-dashboard
        image: enigodupont/d-dashboard:default_tag_change_me
        imagePullPolicy: Always 
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/opt/D-Dashboard/.env"
          subPath: ".env"
          readOnly: true
          name: d-dashboard-secrets
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "400Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: d-dashboard
spec:
  selector:
    run: d-dashboard
  ports:
    - name: ui-port
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: d-dashboard 
spec:
  rules:
    - host: dndashboard.eniworks.net
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: d-dashboard
              port:
                number: 3000
---
#apiVersion: autoscaling/v2beta2
#kind: HorizontalPodAutoscaler
#metadata:
#  name: d-dashboard
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: d-dashboard
#  minReplicas: 1
#  maxReplicas: 2
#  metrics:
#  - type: Resource
#    resource:
#      name: cpu
#      target:
#        type: Utilization
#        averageUtilization: 80
